# bcg-x

Case Study Set 2/: Case Study for Electricity Board - v2.docx  electricity_board_case_study.csv  ~$se Study for Electricity Board - v2.docx
backend/: README.md  pyproject.toml
backend/src/: db.sqlite3  main.py
backend/src/config/: db.py
backend/src/controllers/: electricity_applications.py  routes.py
backend/src/middlewares/: db.py
backend/src/models/: __init__.py  electricity_application.py  user.py
backend/src/scripts/: db_loader.py  electricity_board_case_study.csv
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src/apis/: applications.api.ts
frontend/src/components/Applications/: Applications.tsx  Dashboard.tsx  Editor.tsx  Form.tsx  Grid.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/ui/: date-range.tsx  date.tsx
frontend/src/lib/: dark-mode.ts
frontend/src/mock/: data.ts
frontend/src/schemas/: application.schema.ts
